src/views/models/BrowserView/Cell/ScalarListCell.scss
@import '~styles/variables';

.root {
  width: 700px;
  height: 100%;
  background: #fff;
}

.header {
  // height: 125px;
  background: #27AE60;
  // padding: 30px 30px 0;
}

.filter {
  display: flex;
  align-items: center;
  padding: 30px;
  font-size: 35px;
  color: #fff;

  input {
    padding: 0 0 0 30px;
    color: inherit;
  }

  svg {
    fill: #fff
  }
}

.list {
  height: calc(100% - 125px - 96px);
}

.item {
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-size: 13px;
  line-height: 18px;
  padding: 15px;
  color: $newGrey3;
  cursor: pointer;
  border-bottom: 1px solid $grey2;

  &:hover {
    background: $newGrey2;
  }

  &.related {
    color: #4A90E2;

    .check {
      border: none;

      svg {
        visibility: visible;
      }
    }
  }

  .check {
    border: 1px solid #4A90E2;
    border-radius: 50%;
    width: 23px;
    height: 23px;
    margin-right: 15px;

    svg {
      fill: #4A90E2;
      visibility: hidden;
    }
  }
}

.footer {
  background: #F3F3F3;
  padding: 25px;
  display: flex;
  align-items: center;
  font-size: 20px;
  justify-content: flex-end;
}

.savedIndicator {
  margin: 0 auto 0 0;
  color: $accent-blue;
  opacity: 0.5;
}

.close {
  cursor: pointer;
  padding: 15px 45px;
  line-height: 1;
  border: 1px solid $accent-blue;
  color: $accent-blue;
  &:hover {
    color: #fff;
    background: $accent-blue;
  }
}

